# game-of-life

./: .clang-format  CMakeLists.txt  main.cpp  writeup.md
cmake/: glfw.cmake  glm.cmake
engine/: Camera.hpp  CellMatrix.hpp  CellMatrixRenderer.hpp  DoubleBuffer.hpp  EventQueue.hpp  Events.hpp  GLResource.hpp  GameOfLife.hpp  Program.hpp  Shader.hpp  Size.hpp  Swappable.hpp  Texture.hpp
imgui/: CMakeLists.txt
utils/: FrequencyAverage.hpp  RollingAverage.hpp  RollingBuffer.hpp
